--- a/public/home.css
+++ b/public/home.css
@@ -4,9 +4,10 @@ body,p{
     height:100%;
 }
 body{
-    background-image: url("/img/home.jpg");
-    background-repeat: no-repeat;
+    background-image: url("/img/2.jpg");
+    background-repeat:no-repeat;
     background-size:cover;
+    overflow: hidden;
 }
 
 label{
@@ -27,7 +28,7 @@ p{
 }
 
 
-form{
+#loginForm{
     position: absolute;
     margin:0 auto;
     display: flex;
@@ -40,15 +41,18 @@ form{
 
 .holder{
     border-radius: 15px;
-    border:4px solid aquamarine;
-    box-shadow: 0 0 1rem 0 rgba(0,0,0,0.2);
+    border:4px solid;
+    /* box-shadow: 0 0 1rem 0 rgba(138, 36, 36, 0.2); */
     height:280px;
-    width:370px;
+    width:500px;
     overflow: hidden;
     position: absolute;
-    left:40%;
-    top:40%;
+    left:34%;
+    display: flex;
+    justify-content: center;
     align-items: center;
+    opacity: 0.9;
+    margin-top: -40px;
 }
 
 .holder:before{
@@ -58,4 +62,32 @@ form{
     height:100%;
     position: absolute;
     width:100%;
+}
+.heading{
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 13vh;
+    position: relative;
+    text-align: center;
+    filter:url(#fire);
+    margin-top: 70px;
+}
+
+.heading h1{
+    position: relative;
+    color:#ffeb3b;
+    font-weight: 600;
+    letter-spacing: 4px;
+    font-size:4rem;
+    text-shadow:0 0 10px #ff8c3b,
+    0 0 40px #ff8c3b,
+    0 0 80px #ff8c3b,
+    0 0 160px #ff8c3b,
+    0 0 240px #ff8c3b;
+}
+
+#id,#number{
+    width:300px;
 }
