--- a/views/battle.ejs
+++ b/views/battle.ejs
@@ -21,6 +21,15 @@
                 <button type="submit">Submit</button>
             </form>
         </div>
+        <div class="container1">
+            <!-- <p><%= path %></p> -->
+            <div style="background-color:#fff;">
+                <img src="<%= path %>" width="500px" height="500px" />
+            </div>
+        </div>
     <script src="/timer.js"></script>
+    <script>
+        console.log(id);
+    </script>
 </body>
 </html>
