--- a/public/home.css
+++ b/public/home.css
@@ -4,7 +4,7 @@ body,p{
     height:100%;
 }
 body{
-    background-image: url("/img/2.jpg");
+    background-image: url("/img/background.jpg");
     background-repeat:no-repeat;
     background-size:cover;
     overflow: hidden;
